refactor/prettier 코드포맷팅 설정 변경 및 반영 + buttonAtom 일부 개선

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,12 +18,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
@@ -33,38 +28,38 @@ body {
 }
 
 @font-face {
-  font-family: "NMSNeo1";
-  src: url("../../public/font/NanumSquareNeoTTF-aLt.woff2") format("woff2");
+  font-family: 'NMSNeo1';
+  src: url('../../public/font/NanumSquareNeoTTF-aLt.woff2') format('woff2');
   font-display: swap;
 }
 
 @font-face {
-  font-family: "NMSNeo2";
-  src: url("../../public/font/NanumSquareNeoTTF-bRg.woff2") format("woff2");
+  font-family: 'NMSNeo2';
+  src: url('../../public/font/NanumSquareNeoTTF-bRg.woff2') format('woff2');
   font-display: swap;
 }
 
 @font-face {
-  font-family: "NMSNeo3";
-  src: url("../../public/font/NanumSquareNeoTTF-cBd.woff2") format("woff2");
+  font-family: 'NMSNeo3';
+  src: url('../../public/font/NanumSquareNeoTTF-cBd.woff2') format('woff2');
   font-display: swap;
 }
 
 @font-face {
-  font-family: "NMSNeo4";
-  src: url("../../public/font/NanumSquareNeoTTF-dEb.woff2") format("woff2");
+  font-family: 'NMSNeo4';
+  src: url('../../public/font/NanumSquareNeoTTF-dEb.woff2') format('woff2');
   font-display: swap;
 }
 
 @font-face {
-  font-family: "NMSNeo5";
-  src: url("../../public/font/NanumSquareNeoTTF-eHv.woff2") format("woff2");
+  font-family: 'NMSNeo5';
+  src: url('../../public/font/NanumSquareNeoTTF-eHv.woff2') format('woff2');
   font-display: swap;
 }
 
 @font-face {
-  font-family: "NMSNeo6";
-  src: url("../../public/font/NanumSquareNeo-Variable.woff2") format("woff2");
+  font-family: 'NMSNeo6';
+  src: url('../../public/font/NanumSquareNeo-Variable.woff2') format('woff2');
   font-display: swap;
 }
 
